// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NamespaceSelectFilter /> once the subscribe resolves renders 1`] = `
<body>
  <div>
    <div
      class="namespace-select-filter"
      data-testid="namespace-select-filter"
      id="namespace-select-filter"
      tabindex="1"
    >
      <div
        class="menu"
      >
        <div
          class="non-icon"
        >
          <input
            data-testid="namespace-select-filter-input"
            id="namespace-select-filter-filter"
            type="text"
            value=""
          />
          <div
            class="gradient left"
          />
          <label
            for="namespace-select-filter-filter"
          >
            All namespaces
          </label>
          <div
            class="gradient right"
          />
        </div>
        <i
          class="Icon expand-icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="expand_more"
          >
            expand_more
          </span>
        </i>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> once the subscribe resolves when clicked renders 1`] = `
<body>
  <div>
    <div
      class="namespace-select-filter"
      data-testid="namespace-select-filter"
      id="namespace-select-filter"
      tabindex="1"
    >
      <div
        class="menu"
      >
        <div
          class="non-icon"
        >
          <input
            data-testid="namespace-select-filter-input"
            id="namespace-select-filter-filter"
            type="text"
            value=""
          />
          <div
            class="gradient left"
          />
          <label
            for="namespace-select-filter-filter"
          >
            All namespaces
          </label>
          <div
            class="gradient right"
          />
        </div>
        <i
          class="Icon expand-icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="expand_less"
          >
            expand_less
          </span>
        </i>
      </div>
      <div
        class="list-container"
        data-testid="namespace-select-filter-list-container"
      >
        <div
          class="list"
          style="position: relative; height: 300px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <ul
            style="height: 406px; width: 100%;"
          >
            <li
              class="option flex gaps align-center all-namespaces"
              data-testid="namespace-select-filter-option-All Namespaces"
              style="position: absolute; left: 0px; top: 0px; height: 29px; width: 100%;"
            >
              <span
                class="data"
              >
                All Namespaces
              </span>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-1"
              style="position: absolute; left: 0px; top: 29px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-1
              </div>
              <span
                class="data"
              >
                test-1
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-1-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-1-selected"
              >
                Remove test-1 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-10"
              style="position: absolute; left: 0px; top: 58px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-10
              </div>
              <span
                class="data"
              >
                test-10
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-10-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-10-selected"
              >
                Remove test-10 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-11"
              style="position: absolute; left: 0px; top: 87px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-11
              </div>
              <span
                class="data"
              >
                test-11
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-11-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-11-selected"
              >
                Remove test-11 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-12"
              style="position: absolute; left: 0px; top: 116px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-12
              </div>
              <span
                class="data"
              >
                test-12
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-12-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-12-selected"
              >
                Remove test-12 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-13"
              style="position: absolute; left: 0px; top: 145px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-13
              </div>
              <span
                class="data"
              >
                test-13
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-13-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-13-selected"
              >
                Remove test-13 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-2"
              style="position: absolute; left: 0px; top: 174px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-2
              </div>
              <span
                class="data"
              >
                test-2
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-2-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-2-selected"
              >
                Remove test-2 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-3"
              style="position: absolute; left: 0px; top: 203px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-3
              </div>
              <span
                class="data"
              >
                test-3
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-3-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-3-selected"
              >
                Remove test-3 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-4"
              style="position: absolute; left: 0px; top: 232px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-4
              </div>
              <span
                class="data"
              >
                test-4
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-4-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-4-selected"
              >
                Remove test-4 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-5"
              style="position: absolute; left: 0px; top: 261px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-5
              </div>
              <span
                class="data"
              >
                test-5
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-5-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-5-selected"
              >
                Remove test-5 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-6"
              style="position: absolute; left: 0px; top: 290px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-6
              </div>
              <span
                class="data"
              >
                test-6
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-6-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-6-selected"
              >
                Remove test-6 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-7"
              style="position: absolute; left: 0px; top: 319px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-7
              </div>
              <span
                class="data"
              >
                test-7
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-7-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-7-selected"
              >
                Remove test-7 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-8"
              style="position: absolute; left: 0px; top: 348px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-8
              </div>
              <span
                class="data"
              >
                test-8
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-8-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-8-selected"
              >
                Remove test-8 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-9"
              style="position: absolute; left: 0px; top: 377px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-9
              </div>
              <span
                class="data"
              >
                test-9
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-9-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-9-selected"
              >
                Remove test-9 from selection
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> once the subscribe resolves when clicked when 'test-2' is clicked renders 1`] = `
<body>
  <div>
    <div
      class="namespace-select-filter"
      data-testid="namespace-select-filter"
      id="namespace-select-filter"
      tabindex="1"
    >
      <div
        class="menu"
      >
        <div
          class="non-icon"
        >
          <input
            data-testid="namespace-select-filter-input"
            id="namespace-select-filter-filter"
            type="text"
            value=""
          />
          <div
            class="gradient left"
          />
          <label
            for="namespace-select-filter-filter"
          >
            Namespace: test-2
          </label>
          <div
            class="gradient right"
          />
        </div>
        <i
          class="Icon expand-icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="expand_more"
          >
            expand_more
          </span>
        </i>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> once the subscribe resolves when clicked when 'test-2' is clicked when clicked again renders 1`] = `
<body>
  <div>
    <div
      class="namespace-select-filter"
      data-testid="namespace-select-filter"
      id="namespace-select-filter"
      tabindex="1"
    >
      <div
        class="menu"
      >
        <div
          class="non-icon"
        >
          <input
            data-testid="namespace-select-filter-input"
            id="namespace-select-filter-filter"
            type="text"
            value=""
          />
          <div
            class="gradient left"
          />
          <label
            for="namespace-select-filter-filter"
          >
            Namespace: test-2
          </label>
          <div
            class="gradient right"
          />
        </div>
        <i
          class="Icon expand-icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="expand_less"
          >
            expand_less
          </span>
        </i>
      </div>
      <div
        class="list-container"
        data-testid="namespace-select-filter-list-container"
      >
        <div
          class="list"
          style="position: relative; height: 300px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <ul
            style="height: 406px; width: 100%;"
          >
            <li
              class="option flex gaps align-center all-namespaces"
              data-testid="namespace-select-filter-option-All Namespaces"
              style="position: absolute; left: 0px; top: 0px; height: 29px; width: 100%;"
            >
              <span
                class="data"
              >
                All Namespaces
              </span>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-2"
              style="position: absolute; left: 0px; top: 29px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-2
              </div>
              <span
                class="data"
              >
                test-2
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-2-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-2-selected"
              >
                Remove test-2 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-1"
              style="position: absolute; left: 0px; top: 58px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-1
              </div>
              <span
                class="data"
              >
                test-1
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-1-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-1-add-to-selection"
              >
                Add test-1 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-10"
              style="position: absolute; left: 0px; top: 87px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-10
              </div>
              <span
                class="data"
              >
                test-10
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-10-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-10-add-to-selection"
              >
                Add test-10 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-11"
              style="position: absolute; left: 0px; top: 116px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-11
              </div>
              <span
                class="data"
              >
                test-11
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-11-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-11-add-to-selection"
              >
                Add test-11 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-12"
              style="position: absolute; left: 0px; top: 145px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-12
              </div>
              <span
                class="data"
              >
                test-12
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-12-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-12-add-to-selection"
              >
                Add test-12 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-13"
              style="position: absolute; left: 0px; top: 174px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-13
              </div>
              <span
                class="data"
              >
                test-13
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-13-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-13-add-to-selection"
              >
                Add test-13 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-3"
              style="position: absolute; left: 0px; top: 203px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-3
              </div>
              <span
                class="data"
              >
                test-3
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-3-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-3-add-to-selection"
              >
                Add test-3 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-4"
              style="position: absolute; left: 0px; top: 232px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-4
              </div>
              <span
                class="data"
              >
                test-4
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-4-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-4-add-to-selection"
              >
                Add test-4 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-5"
              style="position: absolute; left: 0px; top: 261px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-5
              </div>
              <span
                class="data"
              >
                test-5
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-5-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-5-add-to-selection"
              >
                Add test-5 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-6"
              style="position: absolute; left: 0px; top: 290px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-6
              </div>
              <span
                class="data"
              >
                test-6
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-6-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-6-add-to-selection"
              >
                Add test-6 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-7"
              style="position: absolute; left: 0px; top: 319px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-7
              </div>
              <span
                class="data"
              >
                test-7
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-7-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-7-add-to-selection"
              >
                Add test-7 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-8"
              style="position: absolute; left: 0px; top: 348px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-8
              </div>
              <span
                class="data"
              >
                test-8
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-8-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-8-add-to-selection"
              >
                Add test-8 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-9"
              style="position: absolute; left: 0px; top: 377px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-9
              </div>
              <span
                class="data"
              >
                test-9
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-9-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-9-add-to-selection"
              >
                Add test-9 to selection
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> once the subscribe resolves when clicked when 'test-2' is clicked when clicked again when 'test-1' is clicked renders 1`] = `
<body>
  <div>
    <div
      class="namespace-select-filter"
      data-testid="namespace-select-filter"
      id="namespace-select-filter"
      tabindex="1"
    >
      <div
        class="menu"
      >
        <div
          class="non-icon"
        >
          <input
            data-testid="namespace-select-filter-input"
            id="namespace-select-filter-filter"
            type="text"
            value=""
          />
          <div
            class="gradient left"
          />
          <label
            for="namespace-select-filter-filter"
          >
            Namespace: test-1
          </label>
          <div
            class="gradient right"
          />
        </div>
        <i
          class="Icon expand-icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="expand_more"
          >
            expand_more
          </span>
        </i>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> once the subscribe resolves when clicked when 'test-2' is clicked when clicked again when 'test-1' is clicked when clicked again, then holding down multi select key when 'test-3' is clicked renders 1`] = `
<body>
  <div>
    <div
      class="namespace-select-filter"
      data-testid="namespace-select-filter"
      id="namespace-select-filter"
      tabindex="1"
    >
      <div
        class="menu"
      >
        <div
          class="non-icon"
        >
          <input
            data-testid="namespace-select-filter-input"
            id="namespace-select-filter-filter"
            type="text"
            value=""
          />
          <div
            class="gradient left"
          />
          <label
            for="namespace-select-filter-filter"
          >
            Namespaces: test-1, test-3
          </label>
          <div
            class="gradient right"
          />
        </div>
        <i
          class="Icon expand-icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="expand_less"
          >
            expand_less
          </span>
        </i>
      </div>
      <div
        class="list-container"
        data-testid="namespace-select-filter-list-container"
      >
        <div
          class="list"
          style="position: relative; height: 300px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <ul
            style="height: 406px; width: 100%;"
          >
            <li
              class="option flex gaps align-center all-namespaces"
              data-testid="namespace-select-filter-option-All Namespaces"
              style="position: absolute; left: 0px; top: 0px; height: 29px; width: 100%;"
            >
              <span
                class="data"
              >
                All Namespaces
              </span>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-1"
              style="position: absolute; left: 0px; top: 29px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-1
              </div>
              <span
                class="data"
              >
                test-1
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-1-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-1-selected"
              >
                Remove test-1 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-2"
              style="position: absolute; left: 0px; top: 58px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-2
              </div>
              <span
                class="data"
              >
                test-2
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-2-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-2-add-to-selection"
              >
                Add test-2 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-10"
              style="position: absolute; left: 0px; top: 87px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-10
              </div>
              <span
                class="data"
              >
                test-10
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-10-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-10-add-to-selection"
              >
                Add test-10 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-11"
              style="position: absolute; left: 0px; top: 116px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-11
              </div>
              <span
                class="data"
              >
                test-11
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-11-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-11-add-to-selection"
              >
                Add test-11 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-12"
              style="position: absolute; left: 0px; top: 145px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-12
              </div>
              <span
                class="data"
              >
                test-12
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-12-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-12-add-to-selection"
              >
                Add test-12 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-13"
              style="position: absolute; left: 0px; top: 174px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-13
              </div>
              <span
                class="data"
              >
                test-13
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-13-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-13-add-to-selection"
              >
                Add test-13 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-3"
              style="position: absolute; left: 0px; top: 203px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-3
              </div>
              <span
                class="data"
              >
                test-3
              </span>
              <i
                class="Icon selected-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-3-selected"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="check"
                >
                  check
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-3-selected"
              >
                Remove test-3 from selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-4"
              style="position: absolute; left: 0px; top: 232px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-4
              </div>
              <span
                class="data"
              >
                test-4
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-4-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-4-add-to-selection"
              >
                Add test-4 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-5"
              style="position: absolute; left: 0px; top: 261px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-5
              </div>
              <span
                class="data"
              >
                test-5
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-5-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-5-add-to-selection"
              >
                Add test-5 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-6"
              style="position: absolute; left: 0px; top: 290px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-6
              </div>
              <span
                class="data"
              >
                test-6
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-6-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-6-add-to-selection"
              >
                Add test-6 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-7"
              style="position: absolute; left: 0px; top: 319px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-7
              </div>
              <span
                class="data"
              >
                test-7
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-7-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-7-add-to-selection"
              >
                Add test-7 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-8"
              style="position: absolute; left: 0px; top: 348px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-8
              </div>
              <span
                class="data"
              >
                test-8
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-8-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-8-add-to-selection"
              >
                Add test-8 to selection
              </div>
            </li>
            <li
              class="option flex gaps align-center single-namespace"
              data-testid="namespace-select-filter-option-test-9"
              style="position: absolute; left: 0px; top: 377px; height: 29px; width: 100%;"
            >
              <i
                class="Icon material interactive focusable small"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="layers"
                >
                  layers
                </span>
              </i>
              <div>
                Select only test-9
              </div>
              <span
                class="data"
              >
                test-9
              </span>
              <i
                class="Icon add-selection-icon box right material interactive focusable small"
                data-testid="namespace-select-filter-option-test-9-add-to-selection"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="add_box"
                >
                  add_box
                </span>
              </i>
              <div
                data-testid="tooltip-content-for-namespace-select-filter-option-test-9-add-to-selection"
              >
                Add test-9 to selection
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;
